<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   			xmlns:tools="http://schemas.android.com/tools"
     		android:layout_width="match_parent"
      		android:layout_height="wrap_content" 
      		android:background="@color/com_ovrhere_picwidget_black"     		
      		>
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:focusableInTouchMode="true"
	    android:clickable="true"
	    >
	<!-- 160 char limit == sms char limit.  -->
	    <EditText
	        android:id="@+id/com_ovrhere_picwidget_activity_config_textin_info"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/com_ovrhere_picwidget_activity_config_img_preview"
	        android:layout_below="@+id/com_ovrhere_picwidget_activity_config_img_preview"
	        android:layout_marginTop="30dp"
	        android:ems="10"
	        android:inputType="textMultiLine" 
	        
	        android:hint="@string/com_ovrhere_picwidget_textin_infoBox"
	        
	        android:maxLines="5"
	        android:maxLength="160"
	        >
	
	        <requestFocus />
	    </EditText>
	
	    <ImageView
	        android:id="@+id/com_ovrhere_picwidget_activity_config_img_preview"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:src="@drawable/ic_no_picture" 
	        android:contentDescription="@string/com_ovrhere_picwidget_contentDescrip_mainPicture"
	        />
	    
	    
	    <LinearLayout
	        android:id="@+id/com_ovrhere_picwidget_activity_config_choiceButtons"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        style="?android:attr/buttonBarStyle"
	        android:layout_marginTop="20dp"
	        android:layout_below="@+id/com_ovrhere_picwidget_activity_config_spinner_clockChoice"
	        >
	
	        <Button
	            android:id="@+id/com_ovrhere_picwidget_activity_config_button_cancel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@android:string/cancel" 
	            style="?android:attr/buttonBarButtonStyle"
	            />
	
	        <Button
	            android:id="@+id/com_ovrhere_picwidget_activity_config_button_confirm"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@android:string/ok" 
	            style="?android:attr/buttonBarButtonStyle"
	            />
	    </LinearLayout>

	    <Button
	        android:id="@+id/com_ovrhere_picwidget_activity_config_button_selectPicture"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/com_ovrhere_picwidget_activity_config_textin_info"
	        android:layout_alignTop="@+id/com_ovrhere_picwidget_activity_config_img_preview"
	        android:text="@string/com_ovrhere_picwidget_button_selectPicture" />

	    <Button
	        android:id="@+id/com_ovrhere_picwidget_activity_config_button_removePicture"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/com_ovrhere_picwidget_activity_config_button_selectPicture"
	        android:text="@string/com_ovrhere_picwidget_button_removePicture" />

	    <Spinner
	        android:id="@+id/com_ovrhere_picwidget_activity_config_spinner_clockChoice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/com_ovrhere_picwidget_activity_config_textin_info"
	        android:layout_alignTop="@+id/com_ovrhere_picwidget_activity_config_text_clockChoiceLabel"
	        android:layout_toRightOf="@+id/com_ovrhere_picwidget_activity_config_text_clockChoiceLabel" />

	    <TextView
	        android:id="@+id/com_ovrhere_picwidget_activity_config_text_clockChoiceLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/com_ovrhere_picwidget_activity_config_textin_info"
	        android:layout_below="@+id/com_ovrhere_picwidget_activity_config_textin_info"
	        android:layout_marginTop="24dp"
	        android:text="@string/com_ovrhere_picwidget_text_timeOptions"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	</RelativeLayout>        
</ScrollView>
