<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2014 Jason J.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" 
     android:background="@drawable/widget_bg_clickable"   
     android:id="@+id/com_ovrhere_picwidget_widget_layout"  
     android:baselineAligned="false"
     android:paddingLeft="@dimen/com_ovrhere_picwidget_widget_layout_sidePadding"
     android:paddingRight="@dimen/com_ovrhere_picwidget_widget_layout_sidePadding"
     android:focusable="true"
     >

        <!--
     Under the assumption the a cell is 40dp and it is a 
 	1x4 widget
        -->

    <RelativeLayout
        android:layout_width="@dimen/com_ovrhere_picwidget_widget_img_mainPicture_width"
        android:layout_height="match_parent" 
        
        android:layout_gravity="center_vertical"
        android:gravity="center"
        
        android:id="@+id/com_ovrhere_picwidget_widget_layout_imgContainer"
        android:background="@drawable/click_frame_bg_clickable_left"
        
        android:focusable="true"
        >
        
        <ImageView
	        android:id="@+id/com_ovrhere_picwidget_widget_img_mainPicture"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/com_ovrhere_picwidget_widget_img_mainPicture_width"
	        
	        android:layout_marginLeft="@dimen/com_ovrhere_picwidget_widget_item_padding"
	        android:layout_marginTop="@dimen/com_ovrhere_picwidget_widget_item_padding"  
	        android:layout_marginRight="@dimen/com_ovrhere_picwidget_widget_item_padding"      
	        android:layout_marginBottom="0dp"
	        
	        android:contentDescription="@string/com_ovrhere_picwidget_contentDescrip_mainPicture"
	        android:scaleType="centerInside"
	        android:src="@drawable/ic_no_picture"
	        />

        <TextView
            android:id="@+id/com_ovrhere_picwidget_widget_text_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/com_ovrhere_picwidget_widget_img_mainPicture"
            android:layout_centerHorizontal="true"
            
            android:layout_marginTop="-1dp"
            
            
            android:text="@string/com_ovrhere_picwidget_text_call"
            android:textColor="@color/com_ovrhere_picwidget_white_translucent"            
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/com_ovrhere_picwidget_widget_img_call"
            android:layout_width="15dp"
            android:layout_height="15dp"
            
            android:layout_alignTop="@+id/com_ovrhere_picwidget_widget_text_call"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-3dp"                        
            
            android:src="@android:drawable/ic_menu_call" 
            android:scaleType="centerInside"
            android:contentDescription="@string/com_ovrhere_picwidget_contentDescrip_callPicture"
            
            />

    </RelativeLayout>

    <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        
        android:id="@+id/com_ovrhere_picwidget_widget_layout_bodyContainer"
        android:background="@drawable/click_frame_bg_clickable_right"
        
        android:focusable="true"
        >
	    <AdapterViewFlipper 
	        android:id="@+id/com_ovrhere_picwidget_widget_viewAnimator_infoText"
	        
	        android:autoStart="true"
	        android:loopViews="true"
	        android:flipInterval="@integer/com_ovrhere_picwidget_widget_viewAdapter_switchTime"
	        
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:minWidth="@dimen/com_ovhere_picwidget_widget_infoText_width_min"
	        
	        
	        android:padding="@dimen/com_ovrhere_picwidget_widget_item_padding"
	        android:layout_alignParentLeft="true"
	        android:layout_toLeftOf="@+id/com_ovrhere_picwidget_widget_frame_clock"
	        android:layout_centerVertical="true"
	        
	        android:layout_gravity="center"
	    	android:gravity="center"    
	        
	        /> 
	        
	         <ProgressBar
	             android:id="@+id/com_ovrhere_picwidget_widget_progress_noText"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             
	            android:layout_gravity="center"
	    		android:gravity="center"
	    		
	    		android:padding="@dimen/com_ovrhere_picwidget_widget_item_padding"
	        	android:layout_alignParentLeft="true"
	        	android:layout_toLeftOf="@+id/com_ovrhere_picwidget_widget_frame_clock"
		       android:layout_centerVertical="true" 
		        style="?android:attr/progressBarStyleSmall"
	         />
     
	    <FrameLayout
	        android:id="@+id/com_ovrhere_picwidget_widget_frame_clock"
	        android:layout_width="@dimen/com_ovrhere_picwidget_widget_frame_clockWidth"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:padding="@dimen/com_ovrhere_picwidget_widget_item_padding"
	        >
	
	        <AnalogClock
	            android:id="@+id/com_ovrhere_picwidget_widget_analogClock"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	    </FrameLayout>
    </RelativeLayout>
</LinearLayout>
